Update -Basic Router Implementation

--- a/Hahn.ApplicatonProcess.December2020.Web/wwwroot/assets/i18n/locales/en/translation.json
+++ b/Hahn.ApplicatonProcess.December2020.Web/wwwroot/assets/i18n/locales/en/translation.json
@@ -1,3 +1,16 @@
 {
-  "home":"ev"
+  "header": {
+    "routes":{
+      "home": "My App",
+      "about": "About"
+    },
+    "language": "Language",
+    "lang": {
+      "german": "German",
+      "english": "English",
+      "turkish": "Turkish"
+    },
+    "swaggerui": "Swagger UI"
+  },
+  "home": "home"
 }
