--- a/Hahn.ApplicatonProcess.December2020.Web/wwwroot/assets/i18n/locales/tr/translation.json
+++ b/Hahn.ApplicatonProcess.December2020.Web/wwwroot/assets/i18n/locales/tr/translation.json
@@ -1,3 +1,16 @@
 {
-  "home":"Anasayfa"
+  "header": {
+    "routes":{
+      "home": "Uygulamam",
+      "about": "Hakkında"
+    },
+    "language": "Dil",
+    "lang": {
+      "german": "Almanca",
+      "english": "İngilizce",
+      "turkish": "Türkçe"
+    },
+    "swaggerui": "Swagger UI"
+  },
+  "home": "anasayfa"
 }
