Update -Router binding is not necessary -UI Update -Simple Form Example -Api Response & Applicant Models -Fixes

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/assets/i18n/locales/en.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/assets/i18n/locales/en.json
@@ -1,9 +1,22 @@
 {
+  "base": {
+    "true": "True",
+    "false": "False",
+    "yes": "Yes",
+    "no": "No",
+    "ok": "Ok",
+    "reset": "Reset",
+    "send": "Send",
+    "cancel": "Cancel",
+    "search": "Search"
+  },
+
   "header": {
-    "routes":{
+    "routes": {
       "home": "My App",
-      "about": "About"
-    },
+      "about": "About",
+      "addapplicant":"Add Applicant"
+    },    
     "language": "Language",
     "lang": {
       "german": "German",
@@ -12,5 +25,22 @@
     },
     "swaggerui": "Swagger UI"
   },
-  "home": "home"
+
+  "home": {
+    "title": "Title of Home Component"
+  },
+
+  "data": {
+    "title": {
+      "id": "Id",
+      "name": "Name",
+      "familyname": "Family Name",
+      "address": "Address",
+      "countryoforigin": "Country of Origin",
+      "emailaddress": "E-Mail Address",
+      "age": "Age",
+      "ishired": "Is Hired?"
+    },
+    "total": "Total"
+  }
 }
