--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/assets/i18n/locales/en.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/assets/i18n/locales/en.json
@@ -52,11 +52,18 @@
     "edit":"Edit",
     "delete":"Delete",
     "errors": {
+      "name_required":"Name Required",
       "name_greater_than":"Name must be greater than {{param}}",
+      "familyname_required":"Family Name Required",
       "familyname_greater_than":"Family Name must be greater than {{param}}",
+      "address_required":"Address Required",
       "address_greater_than":"Address must be greater than {{param}}",
+      "email_address_required":"E-mail address is required",
       "invalid_email_address":"E-Mail address is not valid",
+      "age_invalid":"Age is invalid",
       "age_between": "Age must be between {{param}}",
+      "country_required":"Country Required",
+      "country_greater_than":"Country must be greater than {{param}}",
       "invalid_country": "Invalid Country of Origin"
     }
   }
