--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/assets/i18n/locales/en.json
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/assets/i18n/locales/en.json
@@ -11,27 +11,30 @@
     "search": "Search",
     "actions": "Actions",
     "new": "New",
-    "create":"Create",
+    "create": "Create",
     "edit": "Edit",
     "update": "Update",
-    "delete":"Delete",
+    "delete": "Delete",
     "error": "Error",
     "success": "Success",
     "info": "Info",
     "warning": "Warning",
     "confirm": "Confirm",
     "confirm_deletion": "Confirm Deletion",
-    "confirm_reset":"Confirm Reset",
-    "data_will_be_deleted": "Data will be Deleted",
-    "data_will_be_reset":"Data will be reset"
+    "confirm_reset": "Confirm Reset",
+    "data_will_be_deleted": "Data will be deleted",
+    "data_will_be_reset": "Data will be reset",
+    "click_confirm_to_create":"Please click confirm to create data",
+    "click_confirm_to_update":"Please click confirm to update data"
+  },
+  "routes": {
+    "home": "My App",
+    "about": "About",
+    "addapplicant": "Add Applicant",
+    "editapplicant": "Edit Applicant",
+    "confirmoperation": "Confirm Operation"
   },
   "header": {
-    "routes": {
-      "home": "My App",
-      "about": "About",
-      "addapplicant": "Add Applicant",
-      "editapplicant": "Edit Applicant"
-    },
     "language": "Language",
     "lang": {
       "german": "German",
@@ -55,7 +58,7 @@
       "ishired": "Is Hired?"
     },
     "total": "Total",
-    "validation_error":"Validation Error",
+    "validation_error": "Validation Error",
     "errors": {
       "name_required": "Name Required",
       "name_greater_than": "Name must be greater than {{param}}",
